fix z-index issue testimonial

--- a/src/index.css
+++ b/src/index.css
@@ -410,6 +410,11 @@ video {
   height: auto;
 }
 
+button,
+  a {
+  -webkit-tap-highlight-color: transparent;
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -648,6 +653,10 @@ video {
   top: 100%;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .m-2 {
   margin: 0.5rem;
 }
@@ -745,20 +754,16 @@ video {
   height: 0px;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
 .h-2 {
   height: 0.5rem;
 }
 
-.h-3 {
-  height: 0.75rem;
-}
-
 .h-8 {
   height: 2rem;
+}
+
+.h-12 {
+  height: 3rem;
 }
 
 .min-h-screen {
@@ -791,36 +796,20 @@ video {
   width: 1.75rem;
 }
 
-.w-32 {
-  width: 8rem;
-}
-
-.w-28 {
-  width: 7rem;
-}
-
-.w-20 {
-  width: 5rem;
+.w-12 {
+  width: 3rem;
 }
 
 .w-2 {
   width: 0.5rem;
 }
 
-.w-12 {
-  width: 3rem;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
 .w-8 {
   width: 2rem;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .max-w-\[100px\] {
@@ -920,11 +909,6 @@ video {
        column-gap: 0.5rem;
 }
 
-.gap-x-8 {
-  -moz-column-gap: 2rem;
-       column-gap: 2rem;
-}
-
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -949,10 +933,6 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
 }
 
 .border {
@@ -1005,14 +985,14 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-blue-dark {
-  --tw-bg-opacity: 1;
-  background-color: rgb(9 30 66 / var(--tw-bg-opacity));
-}
-
 .bg-green-bright {
   --tw-bg-opacity: 1;
   background-color: rgb(0 184 217 / var(--tw-bg-opacity));
+}
+
+.bg-blue-dark {
+  --tw-bg-opacity: 1;
+  background-color: rgb(9 30 66 / var(--tw-bg-opacity));
 }
 
 .object-contain {
@@ -1270,11 +1250,6 @@ video {
 .hover\:text-blue-medium:hover {
   --tw-text-opacity: 1;
   color: rgb(0 62 205 / var(--tw-text-opacity));
-}
-
-.hover\:text-blue-light:hover {
-  --tw-text-opacity: 1;
-  color: rgb(0 101 255 / var(--tw-text-opacity));
 }
 
 .hover\:text-green-bright:hover {
@@ -1548,12 +1523,6 @@ video {
     flex-direction: row-reverse;
   }
 
-  .md\:hover\:shadow-md:hover {
-    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-
   .md\:hover\:shadow-lg:hover {
     --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1576,10 +1545,6 @@ video {
 
   .lg\:w-96 {
     width: 24rem;
-  }
-
-  .lg\:max-w-3xl {
-    max-width: 48rem;
   }
 
   .lg\:max-w-4xl {
@@ -1615,6 +1580,11 @@ video {
 
   .lg\:font-light {
     font-weight: 300;
+  }
+
+  .lg\:hover\:bg-green-bright:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 184 217 / var(--tw-bg-opacity));
   }
 }
 
